# iris-tutorial

./: .gitignore  LICENSE  Makefile  Makefile.conf  Makefile.coq.local  README.md  TODO.md  _CoqProject  cheatsheet.md  gen-exercises.awk  graph.md  iris-tutorial.opam
.devcontainer/: devcontainer.json
.devcontainer/arm64/: devcontainer.json
.devcontainer/x86-64/: devcontainer.json
.github/workflows/: build.yml
coqdocjs/extra/: header.html
docker_image/: Dockerfile  Makefile
exercises/: adequacy.v  array_lock.v  arrays.v  base.v  basics.v  counter.v  custom_ra.v  fixpoint.v  gr_predicates.v  invariants.v  lang.v  later.v  linked_lists.v  merge_sort.v  ofe.v  persistently.v  pure.v  resource_algebra.v  specifications.v  spin_lock.v  structured_conc.v  threads.v  ticket_lock.v  timeless.v
heaplang/: base.v  counter.v  invariants.v  linked_lists.v  lock.v  threads.v
logic/: base.v  cancelable_invariant.v  cmra.v  key.v  later.v  persistently.v  pure.v
solutions/: arrays.v  base.v  counter.v  fixpoint.v  invariants.v  lang.v  linked_lists.v  merge_sort.v  persistently.v  pure.v  spin_lock.v  threads.v
theories/: adequacy.v  array_lock.v  arrays.v  base.v  basics.v  concurrency.v  counter.v  custom_ra.v  fixpoint.v  fractional.v  gr_predicates.v  invariants.v  lang.v  later.v  linked_lists.v  merge_sort.v  ofe.v  persistently.v  pure.v  resource_algebra.v  resources.v  specifications.v  spin_lock.v  structured_conc.v  threads.v  ticket_lock.v  ticket_lock_advanced.v  timeless.v
